--- a/src/components/Homeinfo.css
+++ b/src/components/Homeinfo.css
@@ -1,15 +1,14 @@
 .home-info-container {
     text-align: center;
     margin-top: -1%;
-    font-family: 'Courier New', Courier, monospace;
-    color: #878686;
-    background: transparent; 
+    font-family: 'poppins','Courier New', Courier, monospace;
+    opacity:20;
   }
   
   .name {
     font-size: 3rem;
     font-weight: bold;
-    color: #afafaf; /* Subtle dark gray for better readability */
+    color: #285c8f; /* Subtle dark gray for better readability */
     background: transparent;
   }
   
@@ -20,7 +19,7 @@
     overflow: hidden;
     display: inline-block;
     width: fit-content;
-    color: #494747; /* Matches the name color for consistency */
+    color: #686c70; /* Matches the name color for consistency */
     background: transparent; 
     animation: blink 0.7s steps(2, start) infinite;
   }
